# Copyright (C) 2016 Niko Kiiskinen.
# All Rights Reserved.
# This file is distributed under the GPLv2 License.
#
## $Id: Makefile.am lolfs manual 0.13 2016-11-07 01:28:49Z niko $
#
# Author: Niko Kiiskinen 2016-11-07
#
# This file defines the common automake macros for LOLFS manual
#
#
AUTOMAKE_OPTIONS = foreign
dist_man3_MANS = \
	lol.3 \
	mkfs.lolfs.3 \
	fsck.lolfs.3 \
	lol_fopen.3 \
	lol_fclose.3 \
	lol_ferror.3 \
	lol_clearerr.3 \
	lol_feof.3 \
	lol_fseek.3
